--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<script src="http://code.jquery.com/jquery-latest.js"></script>
 <script type="text/javascript" th:src="@{/js/chat.js}"></script>
-<th:block th:replace="~{/layout/basic :: setContent(~{this :: content})}">
+<th:block>
+<!--<th:block th:replace="~{setContent(~{this :: content})}">-->
     <th:block th:fragment="content">
-
         <div class="container">
             <div class="col-6">
                 <label><b>채팅방</b></label>
@@ -20,7 +21,6 @@
                 </div>
             </div>
         </div>
-
     </th:block>
 </th:block>
 </html>
